--- a/PostReq/App.config
+++ b/PostReq/App.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
     <appSettings>
-    <add key="connection" value="server=r22aufsrv02.main.russianpost.ru\ufps;database=postreq;uid=fpd_client;pwd=123456;Max Pool Size=300" />
+    <add key="connection" value="server=.\sqlnas;database=postreq;uid=sa;pwd=123456;Max Pool Size=300" />
+    <add key="SendKeys" value="SendInput" />
   </appSettings>
 </configuration>
