--- a/PostReq/App.config
+++ b/PostReq/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <appSettings>
-    <add key="connection" value="server=10.56.0.154;database=postreq;uid=fpd_client;pwd=123456;Max Pool Size=300" />
+  <appSettings>
+    <!--<add key="connection" value="server=10.56.0.154;database=postreq;uid=fpd_client;pwd=123456;Max Pool Size=300" />-->
+    <add key="connection" value="server=.\sqlnas;database=postreq;uid=sa;pwd=123456;Max Pool Size=300" />
     <add key="SendKeys" value="SendInput" />
   </appSettings>
 </configuration>
