--- a/PostReq/PostReq.csproj
+++ b/PostReq/PostReq.csproj
@@ -126,7 +126,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\DataSources\PostReq.Model.Request.datasource" />
     <None Include="Properties\DataSources\PostReq.Model.RequestRow.datasource" />
