добавлены иконки на главную форму

--- a/PostReq/PostReq.csproj
+++ b/PostReq/PostReq.csproj
@@ -147,7 +147,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="1482421095_Shop-Payment-58.ico" />
-    <Content Include="Image\add_7201.png" />
+    <Content Include="Image\editcopy_3257.png" />
+    <Content Include="Image\edit_9389.png" />
+    <Content Include="Image\edit_add_9943.png" />
     <Content Include="Image\icon.ico" />
     <Content Include="Image\icon.png" />
   </ItemGroup>
