--- a/PostReq/PostReq.csproj
+++ b/PostReq/PostReq.csproj
@@ -96,6 +96,7 @@
     </Compile>
     <Compile Include="Model\FilterModel.cs" />
     <Compile Include="Model\Nom.cs" />
+    <Compile Include="Model\Post.cs" />
     <Compile Include="Model\Repository.cs" />
     <Compile Include="Model\ReqDataContext.cs" />
     <Compile Include="Model\Request.cs" />
@@ -103,6 +104,7 @@
     <Compile Include="Model\SearchModel.cs" />
     <Compile Include="Model\State.cs" />
     <Compile Include="Model\UnitOfWork.cs" />
+    <Compile Include="Model\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\NomLoader.cs" />
