--- a/PostReq/PostReq.csproj
+++ b/PostReq/PostReq.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
@@ -82,6 +83,7 @@
     </Compile>
     <Compile Include="Controller\RequestController.cs" />
     <Compile Include="Controller\SearchController.cs" />
+    <Compile Include="Controller\UserController.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
