--- a/PostReq/PostReq.csproj
+++ b/PostReq/PostReq.csproj
@@ -96,6 +96,7 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Model\EditRequestModel.cs" />
     <Compile Include="Model\FilterModel.cs" />
     <Compile Include="Model\Nom.cs" />
     <Compile Include="Model\Post.cs" />
